--- a/dashboard.html
+++ b/dashboard.html
@@ -8,231 +8,209 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css">
     <style>
         body {
-    font-family: 'Arial', sans-serif;
-    background-color: #f8f9fa;
-    margin: 0;
-    padding: 0;
-}
-
-.sidebar {
-    width: 250px;
-    background-color: #343a40;
-    color: #fff;
-    position: fixed;
-    height: 100%;
-    padding-top: 20px;
-}
-
-.sidebar h2 {
-    text-align: center;
-    margin-bottom: 30px;
-    font-size: 1.5rem;
-}
-
-.sidebar ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-.sidebar ul li {
-    padding: 15px;
-    text-align: left;
-    border-bottom: 1px solid #495057;
-}
-
-.sidebar ul li a {
-    color: #fff;
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-}
-
-.sidebar ul li a i {
-    margin-right: 10px;
-}
-
-.sidebar ul li:hover {
-    background-color: #495057;
-}
-
-.main-content {
-    margin-left: 250px;
-    padding: 20px;
-}
-
-.header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #343a40;
-    color: #fff;
-    padding: 10px 20px;
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-}
-
-.header h1 {
-    margin: 0;
-    font-size: 1.5rem;
-}
-
-.header .notification {
-    position: relative;
-    cursor: pointer;
-}
-
-.header .notification i {
-    font-size: 24px;
-    color: #fff;
-}
-
-.header .badge {
-    position: absolute;
-    top: -5px;
-    right: -5px;
-    background: red;
-    color: white;
-    font-size: 12px;
-    padding: 2px 6px;
-    border-radius: 50%;
-    display: none;
-}
-
-.header #notificationsContainer {
-    position: absolute;
-    top: 25px;
-    right: 0;
-    background-color: white;
-    border: 1px solid #ccc;
-    padding: 10px;
-    display: none;
-    width: 200px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    z-index: 10;
-}
-
-.header #notificationsList {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
-.header #notificationsList li {
-    padding: 5px 0;
-}
-
-.cards {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 20px;
-    flex-wrap: wrap;
-}
-
-.card {
-    background: white;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    text-align: center;
-    width: 100%;
-    max-width: 30%;
-    margin-bottom: 20px;
-}
-
-.card i {
-    font-size: 50px;
-    margin-bottom: 10px;
-    color: #17a2b8;
-}
-
-.card h3 {
-    margin: 10px 0;
-}
-
-.card a {
-    text-decoration: none;
-    color: #007bff;
-}
-
-.table-section {
-    margin-top: 40px;
-}
-
-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 20px;
-    background: white;
-    border-radius: 5px;
-    overflow: hidden;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-}
-
-th, td {
-    text-align: left;
-    padding: 15px;
-    border-bottom: 1px solid #ddd;
-}
-
-th {
-    background-color: #343a40;
-    color: white;
-}
-
-tr:hover {
-    background-color: #f1f1f1;
-}
-
-/* Media queries for responsive design */
-@media (max-width: 768px) {
-    .sidebar {
-        width: 100%;
-        height: auto;
-        position: relative;
-    }
-
-    .sidebar h2 {
-        font-size: 1.2rem;
-    }
-
-    .main-content {
-        margin-left: 0;
-    }
-
-    .header {
-        flex-direction: column;
-        align-items: flex-start;
-    }
-
-    .header h1 {
-        font-size: 1.2rem;
-    }
-
-    .header .notification i {
-        font-size: 20px;
-    }
-
-    .cards {
-        flex-direction: column;
-    }
-
-    .card {
-        width: 100%;
-        margin-bottom: 20px;
-    }
-}
+            font-family: 'Arial', sans-serif;
+            background-color: #f8f9fa;
+            margin: 0;
+            padding: 0;
+        }
+        .sidebar {
+            width: 250px;
+            background-color: #343a40;
+            color: #fff;
+            position: fixed;
+            height: 100%;
+            padding-top: 20px;
+            transition: transform 0.3s ease;
+        }
+        .sidebar.closed {
+            transform: translateX(-100%);
+        }
+        .sidebar h2 {
+            text-align: center;
+            margin-bottom: 30px;
+            font-size: 1.5rem;
+        }
+        .sidebar ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        .sidebar ul li {
+            padding: 15px;
+            text-align: left;
+            border-bottom: 1px solid #495057;
+        }
+        .sidebar ul li a {
+            color: #fff;
+            text-decoration: none;
+            display: flex;
+            align-items: center;
+        }
+        .sidebar ul li a i {
+            margin-right: 10px;
+        }
+        .sidebar ul li:hover {
+            background-color: #495057;
+        }
+        .main-content {
+            margin-left: 250px;
+            padding: 20px;
+            transition: margin-left 0.3s ease;
+        }
+        .main-content.shifted {
+            margin-left: 0;
+        }
+        .header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background-color: #343a40;
+            color: #fff;
+            padding: 10px 20px;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+        }
+        .header h1 {
+            margin: 0;
+            font-size: 1.5rem;
+        }
+        .header .notification {
+            position: relative;
+            cursor: pointer;
+        }
+        .header .notification i {
+            font-size: 24px;
+            color: #fff;
+        }
+        .header .badge {
+            position: absolute;
+            top: -5px;
+            right: -5px;
+            background: red;
+            color: white;
+            font-size: 12px;
+            padding: 2px 6px;
+            border-radius: 50%;
+            display: none;
+        }
+        .header #notificationsContainer {
+            position: absolute;
+            top: 25px;
+            right: 0;
+            background-color: white;
+            border: 1px solid #ccc;
+            padding: 10px;
+            display: none;
+            width: 200px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            z-index: 10;
+        }
+        .header #notificationsList {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+        .header #notificationsList li {
+            padding: 5px 0;
+        }
+        .cards {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 20px;
+            flex-wrap: wrap;
+        }
+        .card {
+            background: white;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            text-align: center;
+            width: 100%;
+            max-width: 30%;
+            margin-bottom: 20px;
+        }
+        .card i {
+            font-size: 50px;
+            margin-bottom: 10px;
+            color: #17a2b8;
+        }
+        .card h3 {
+            margin: 10px 0;
+        }
+        .card a {
+            text-decoration: none;
+            color: #007bff;
+        }
+        .table-section {
+            margin-top: 40px;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+            background: white;
+            border-radius: 5px;
+            overflow: hidden;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        th, td {
+            text-align: left;
+            padding: 15px;
+            border-bottom: 1px solid #ddd;
+        }
+        th {
+            background-color: #343a40;
+            color: white;
+        }
+        tr:hover {
+            background-color: #f1f1f1;
+        }
+        /* Media queries for responsive design */
+        @media (max-width: 768px) {
+            .sidebar {
+                width: 100%;
+                height: auto;
+                position: relative;
+                transform: translateX(-100%);
+            }
+            .sidebar.closed {
+                transform: translateX(0);
+            }
+            .main-content {
+                margin-left: 0;
+            }
+            .main-content.shifted {
+                margin-left: 250px;
+            }
+            .header {
+                flex-direction: column;
+                align-items: flex-start;
+            }
+            .header h1 {
+                font-size: 1.2rem;
+            }
+            .header .notification i {
+                font-size: 20px;
+            }
+            .cards {
+                flex-direction: column;
+            }
+            .card {
+                width: 100%;
+                margin-bottom: 20px;
+            }
+        }
     </style>
 </head>
 <body>
-    <div class="sidebar">
+    <div class="sidebar closed">
         <h2>IMS Portal</h2>
         <ul>
             <li><a href="#"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
             <li><a href="employee_task_manager.html"><i class="fas fa-users"></i> Staff</a></li>
             <li><a href="Resource.html"><i class="fas fa-box"></i> Material</a></li>
             <li><a href="Tasksheet.html"><i class="fas fa-tasks"></i> Tasks</a></li>
-            <li><a href="DailyReport.html"><i class="fas fa-tasks"></i> Daily Reprot</a></li>
+            <li><a href="DailyReport.html"><i class="fas fa-tasks"></i> Daily Report</a></li>
             <li><a href="Tool.html"><i class="fas fa-tools"></i> Tools</a></li>
             <li><a href="Chris.html"><i class="fas fa-user"></i> Chris</a></li>
             <li><a href="purchases.html"><i class="fas fa-shopping-cart"></i> Purchases</a></li>
@@ -242,9 +220,10 @@ tr:hover {
         </ul>
     </div>
 
-    <div class="main-content">
+    <div class="main-content shifted">
         <div class="header">
             <h1>PENTA CONSTRUCTION</h1>
+            <button id="toggleSidebar" class="btn btn-outline-light btn-sm">Toggle Sidebar</button>
             <div style="display: flex; align-items: center;">
                 <div class="notification" style="position: relative;">
                     <i class="fas fa-bell" id="notificationIcon" style="cursor: pointer;"></i>
@@ -313,9 +292,7 @@ tr:hover {
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
-    
     <script>
-        // Mock data for testing purposes
         const mockEmployees = [
             { staffId: 1, name: 'John', surname: 'Doe', workLocation: 'Office', position: 'Developer', status: 'Unassigned' },
             { staffId: 2, name: 'Jane', surname: 'Smith', workLocation: 'Remote', position: 'Designer', status: 'Active' },
@@ -323,11 +300,29 @@ tr:hover {
             { staffId: 4, name: 'Emily', surname: 'Davis', workLocation: 'Remote', position: 'Developer', status: 'Active' }
         ];
 
-        // Function to populate the Unassigned Staff table
+        const notifications = [];
+
+        function showNotification(message) {
+            const notificationBadge = document.getElementById('notificationBadge');
+            const notificationsContainer = document.getElementById('notificationsContainer');
+            const notificationsList = document.getElementById('notificationsList');
+
+            notifications.push(message);
+
+            notificationBadge.style.display = 'block';
+            notificationBadge.textContent = notifications.length;
+
+            const listItem = document.createElement('li');
+            listItem.textContent = message;
+            notificationsList.appendChild(listItem);
+
+            notificationsContainer.style.display = 'block';
+        }
+
         function populateUnassignedStaff(employees) {
             const unassignedEmployees = employees.filter(employee => employee.status === 'Unassigned');
             const tableBody = document.getElementById('unassignedStaffTable');
-            tableBody.innerHTML = ''; // Clear the table before populating
+            tableBody.innerHTML = '';
 
             if (unassignedEmployees.length === 0) {
                 tableBody.innerHTML = '<tr><td colspan="2">No unassigned employees found.</td></tr>';
@@ -340,11 +335,10 @@ tr:hover {
             });
         }
 
-        // Function to populate the Active Tasks table
         function populateActiveTasks(employees) {
             const activeTasks = employees.filter(employee => employee.status === 'Active');
             const tableBody = document.getElementById('activeTasksTable');
-            tableBody.innerHTML = ''; // Clear the table before populating
+            tableBody.innerHTML = '';
 
             if (activeTasks.length === 0) {
                 tableBody.innerHTML = '<tr><td colspan="5">No active tasks found.</td></tr>';
@@ -352,19 +346,42 @@ tr:hover {
 
             activeTasks.forEach(task => {
                 const row = tableBody.insertRow();
-                row.insertCell(0).innerText = task.workLocation; // Assuming workLocation as project name
-                row.insertCell(1).innerText = task.position; // Assuming position as task name
-                row.insertCell(2).innerText = `${task.name} ${task.surname}`; // Assigned to
-                row.insertCell(3).innerText = 'N/A'; // Placeholder for start date
-                row.insertCell(4).innerText = 'N/A'; // Placeholder for priority
+                row.insertCell(0).innerText = task.workLocation;
+                row.insertCell(1).innerText = task.position;
+                row.insertCell(2).innerText = `${task.name} ${task.surname}`;
+                row.insertCell(3).innerText = 'N/A';
+                row.insertCell(4).innerText = 'N/A';
             });
         }
 
-        // Initialize the data when the page loads
+        function startTask(taskDescription) {
+            showNotification(`Task "${taskDescription}" has started.`);
+        }
+
+        function completeTask(taskDescription) {
+            showNotification(`Task "${taskDescription}" was completed.`);
+        }
+
         window.onload = () => {
             populateUnassignedStaff(mockEmployees);
             populateActiveTasks(mockEmployees);
+
+            // Example notifications for testing
+            startTask("Design Phase");
+            completeTask("Initial Setup");
         };
+
+        document.getElementById('notificationIcon').addEventListener('click', () => {
+            const notificationsContainer = document.getElementById('notificationsContainer');
+            notificationsContainer.style.display = notificationsContainer.style.display === 'none' ? 'block' : 'none';
+        });
+
+        document.getElementById('toggleSidebar').addEventListener('click', () => {
+            const sidebar = document.querySelector('.sidebar');
+            const mainContent = document.querySelector('.main-content');
+            sidebar.classList.toggle('closed');
+            mainContent.classList.toggle('shifted');
+        });
     </script>
 </body>
 </html>
