--- a/Tasksheet.html
+++ b/Tasksheet.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -229,17 +230,18 @@
         };
 
         let tasks = [];
-        let completedTasks = [];
 
         // Load tasks from Firebase
         function loadTasks() {
             const tasksRef = ref(db, 'tasks/');
             onValue(tasksRef, (snapshot) => {
                 const data = snapshot.val();
-                tasks = [];
-                for (const key in data) {
-                    tasks.push({ key, ...data[key] });
+                if (data) {
+                    tasks = Object.keys(data).map(key => ({ key, ...data[key] }));
+                } else {
+                    tasks = [];
                 }
+                console.log("Tasks loaded from Firebase:", tasks);
                 updateTable();
             });
         }
@@ -250,6 +252,7 @@
             const newTaskRef = push(tasksRef);
             set(newTaskRef, task).then(() => {
                 console.log("Task saved to Firebase:", task); // Debugging
+                loadTasks(); // Reload tasks after saving
             }).catch((error) => {
                 console.error("Error saving task to Firebase:", error); // Debugging
             });
@@ -262,6 +265,8 @@
                 console.log("Task updated in Firebase:", task); // Debugging
                 if (task.status === 'Completed') {
                     moveToCompletedTasks(task, taskKey);
+                } else {
+                    loadTasks(); // Reload tasks after updating
                 }
             }).catch((error) => {
                 console.error("Error updating task in Firebase:", error); // Debugging
@@ -277,21 +282,19 @@
             }
 
             // Add task to completed tasks
-            completedTasks.push(task);
-            updateCompletedTasksPage();
-            updateTable();
-        }
-
-        // Update the completed tasks page
-        function updateCompletedTasksPage() {
             const completedTasksRef = ref(db, 'completedtasks/');
-            remove(completedTasksRef).then(() => {
-                completedTasks.forEach(task => {
-                    const newTaskRef = push(completedTasksRef);
-                    set(newTaskRef, task);
+            const newTaskRef = push(completedTasksRef);
+            set(newTaskRef, task).then(() => {
+                console.log("Task moved to completed tasks:", task); // Debugging
+                const taskRef = ref(db, `tasks/${taskKey}`);
+                remove(taskRef).then(() => {
+                    console.log("Task removed from tasks:", task); // Debugging
+                    loadTasks(); // Reload tasks after moving
+                }).catch((error) => {
+                    console.error("Error removing task from tasks:", error); // Debugging
                 });
             }).catch((error) => {
-                console.error("Error updating completed tasks:", error);
+                console.error("Error moving task to completed tasks:", error); // Debugging
             });
         }
 
